Fix rotate row alignment
- Aligns rotate button to other buttons.

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -123,6 +123,10 @@ textarea {
     display: grid;
     grid-template-columns: 6fr 6fr 7fr;
 }
+.path-operations-grid4 {
+    display: grid;
+    grid-template-columns: 12fr 12fr 12fr 21fr;
+}
 
 /* Drawings */
 .drawings {
